cmake_minimum_required (VERSION 3.0.9)
project (cpp_learn CXX)

set(COMMON_LIBS ./common_custom_headers/)
add_subdirectory(app_test)
add_subdirectory(app2_test)
add_subdirectory(common_custom_headers)
add_subdirectory(1_primitive_types)
add_subdirectory(base2_bitcalc)
add_subdirectory(inheritance)
add_subdirectory(clockWorks)
add_subdirectory(threading)
add_subdirectory(from_bard/gopro_telemetry_extractor)
add_subdirectory(roman2string)